assets/app.css
@import url("https://use.typekit.net/xbi8ees.css");

@font-face {
  font-family: pul-icons;
  src: url(/assets/fonts/icons/pul-icons.woff);
  font-display: swap;
}

body {
  font-family: "franklin-gothic-urw", 'Helvetica Neue', Arial, sans-serif;
  line-height: 1.5rem;
  font-size: 1.125rem;
  padding: 0;
  border: 0;
  margin: 0;
  background-color: #EDEDED;
}

.icon {
  font-family: pul-icons;
}

.icon-archives::before {
  content: '\f5f5';
}

.icon-audio::before {
  content: '\e604';
}

.icon-best-bet::before {
  content: '\f580';
}

.icon-book::before {
  content: '\e60b';
}

.icon-coin::before {
  content: '\e901';
}

.icon-collection::before {
  content: '\f5fa';
}

.icon-compass::before {
  content: '\efd5';
}

.icon-databases::before {
  content: '\ec2b';
}

.icon-data-file::before {
  content: '\e601';
}

.icon-digital::before {
  content: '\e91e';
}

.icon-dissertation::before {
  content: '\e60e';
}

.icon-film::before {
  content: '\e920';
}

.icon-journal::before {
  content: '\e60c';
}

.icon-manuscript::before {
  content: '\e603';
}

.icon-map::before {
  content: '\e602';
}

.icon-mixed-material::before {
  content: '\e60d';
}

.icon-musical-score::before {
  content: '\e605';
}

.icon-newspaper::before {
  content: '\f608';
}

.icon-newtab::before {
  content: '\f639';
}

.icon-phone-book::before {
  content: '\f6a8';
}

.icon-question::before {
  content: '\f558';
}

.icon-right::before {
  content: '\e909';
}

.icon-search::before {
  content: '\e90b';
}

.icon-senior-thesis::before {
  content: '\e600';
}

.icon-text::before {
  content: '\ec40';
}

.icon-video-projected-medium {
  content: '\e606';
}

.icon-visual-material::before {
  content: '\e607';
}

.icon-windows::before {
  content: '\f0fd'
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

html {
  box-sizing: border-box;
}
*,*::before, *::after {
  box-sizing: inherit;
}

h2 {
  font-weight: 600;
  font-size: 1.75rem;
  margin-bottom: 0;
  margin-top: 0;
}

a {
  color: light-dark(var(--color-bleu-de-france), var(--gray-10));
}

.lux-alert a {
  color: light-dark(var(--color-cerulean-blue), var(--color-bleu-de-france-darker));
}

/* Mobile rules */
@media screen and (max-width: 768px) {
  h2 {
    font-size: 1.75rem;
  }
  h3 {
    font-size: 1.625rem;
  }
}

/* Color variables */
:root {
  --black: #000;
  --gray-100: #121212;
  --gray-90: #212529;
  --gray-70: #717171;
  --gray-50: #D0D0D0;
  --gray-20: #EEE;
  --gray-10: #F7F7F7;
  --white: #FFF;
  --orange-50: #E77500;
  --orange-40: #F58025;
  --orange-20: #FAE3CC;
  --orange-10: #FCF1E5;
  --red: #D12A2F;
  --light-green: #CBE6D0;
  --green: #1A8648;
  --dark-green: #005010;
  --dark-blue: #3466a2; /* combination of --engineering and --gray-90 */
  --architecture: #C3D600;
  --engineering: #3B7CCA;
  --lewis: #915BAF;
  --yellow: #FBE3BB;
  --dark-yellow: #7C4405;
  --light-blue: #CBDDE6;
  --very-dark-blue: #002750;
  --link-blue: #2c6daf;

  --mendel: #DA1884;
  --special-collections: #000;
  --east-asian: var(--green);
  --firestone: #EE7421;
  --marquand: var(--red);
  --mudd: #F2A900;
  --stokes: #C24D01;


  --result-title-line-height: 1.875rem;
}

